[gd_scene load_steps=3 format=3 uid="uid://vg2nh2sv1d5i"]

[ext_resource type="Script" path="res://UI/MainMenuUI.gd" id="1_mrrim"]
[ext_resource type="Texture2D" uid="uid://xd6kup14fgol" path="res://UI/Resources/ol_gregg_token.png" id="2_gi46g"]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mrrim")

[node name="PlayCutsceneButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -15.5
offset_right = 250.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Cutscenes"

[node name="StartTravelManagerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 29.5
offset_right = 250.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Travel Manager"

[node name="CharacterSprite" type="Sprite2D" parent="."]
position = Vector2(5.99994, -3)
scale = Vector2(0.503906, 0.503906)
texture = ExtResource("2_gi46g")

[connection signal="pressed" from="PlayCutsceneButton" to="." method="_on_play_cutscene_button_pressed"]
[connection signal="pressed" from="StartTravelManagerButton" to="." method="_on_start_travel_manager_button_pressed"]
